[package]
documentation = "http://gtk-rs.org/docs/atk/"
categories = ["api-bindings", "gui"]
license = "MIT"
description = "Rust bindings for the ATK library"
name = "atk"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
readme = "README.md"
version = "0.5.0"
keywords = ["atk", "gtk-rs", "gnome", "accessibility"]
repository = "https://github.com/gtk-rs/atk"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[badges]
appveyor = { repository = "GuillaumeGomez/atk", service = "github" }
travis-ci = { repository = "gtk-rs/atk" }

[lib]
name = "atk"

[features]
purge-lgpl-docs = ["gtk-rs-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs"]
dox = ["atk-sys/dox"]
v2_30 = ["atk-sys/v2_30"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1.3"
optional = true

[dependencies]
libc = "0.2"
bitflags = "1.0"
atk-sys = "0.7.0"
glib-sys = "0.7.0"
gobject-sys = "0.7.0"
glib = "0.6.0"

[dev-dependencies]
gir-format-check = "^0.1"
